# pytorch-template

./: .gitignore  dataloaders.py  pixi.toml  pyproject.toml
base/: __init__.py  base_dataloader.py  base_model.py  base_trainer.py
configs/: model.yml
logger/: __init__.py  logger.py
models/: alexnet.py  loss.py
tools/: program.py
utils/: util.py
